add more tests, fix recombinenonalphas method, stop errors with java25